# fastapi-business-api-portfolio

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/application/models/: user_dto.py
app/application/services/: user_service.py
app/application/use_cases/: use_case.py
app/application/use_cases/request/: option_request.py  update_user_request.py
app/application/use_cases/response/: option_response.py  user_response.py
app/domain/entities/: corporate.py  user.py
app/domain/errors/: __init__.py
app/domain/events/: __init__.py  user_events.py
app/domain/repositories/: user_repository.py
app/domain/value_objects/: corporate_code.py  email.py
app/infrastructure/repositories/: in_memory_user_repository.py
app/infrastructure/repositories/mappers/: user_mapper.py
app/infrastructure/repositories/models/: user_model.py
app/infrastructure/services/: database.py  jwt_service.py  user_service_impl.py
app/presentation/: __init__.py
app/presentation/rest/: app.py  router.py
app/presentation/rest/dependencies/: auth_dependency.py
app/presentation/rest/endpoints/: auth.py  corporate.py  option.py
app/presentation/rest/schemas/: auth.py  corporate.py  option.py
tests/application/: test_user_service.py
tests/domain/: __init__.py  test_email_value_object.py  test_user_entity.py
tests/infrastructure/: test_jwt_service.py
tests/presentation/: __init__.py
